--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,5 @@
 @import 'partials/variables';
 @import 'partials/commons';
 @import 'partials/header';
+@import 'partials/footer';
+@import 'partials/about';
